# Venom_VNV

./: .gitignore  .gitmodules  README.md  README_EN.md
docs/: architecture.md  armor_detector.md  armor_tracker.md  faq.md  (+28 more)
venom_bringup/: MISSION_CONTROLLER_README.md  package.xml  setup.cfg  setup.py
venom_bringup/config/: ekf.yaml  nav2_params_scoutmini.yaml
venom_bringup/config/examples/: MID360_config.json
venom_bringup/config/hunter_se/: MID360_config.json
venom_bringup/config/infantry/: camera_info.yaml  camera_params.yaml  node_params.yaml  serial_params.yaml
venom_bringup/config/scout_mini/: MID360_config.json  mission_config.yaml  point_lio.yaml  point_lio_mapping.yaml  slam_toolbox_mapping.yaml  waypoints.yaml
venom_bringup/config/sentry/: nav2_params.yaml  serial_params.yaml
venom_bringup/launch/: health_aware_navigation.launch.py  mapping_async_bringup.launch.py  mapping_bringup.launch.py  robot_bringup.launch.py  scout_mini_robot_bringup.launch.py  sentry_robot_bringup.launch.py
venom_bringup/launch/hunter_se/: robot_bringup.launch.py
venom_bringup/launch/infantry/: center_lock_test.launch.py  infantry_auto_aim.launch.py  robot_bringup.launch.py  tracker_center_lock_test.launch.py  tracker_prediction_ballistic_test.launch.py  tracker_prediction_center_lock_test.launch.py
venom_bringup/launch/scout_mini/: relocalization.launch.py  robot_bringup.launch.py  scout_mini_mapping.launch.py
venom_bringup/launch/sentry/: robot_bringup.launch.py  sentry_navigation.launch.py
venom_bringup/map/: rmul2026_map.pgm  rmul2026_map.yaml
venom_bringup/scripts/: backup_pcd.sh  mapping_with_autosave.sh
venom_bringup/venom_bringup/: health_aware_commander.py
venom_bringup/venom_bringup/mission_controller/: __init__.py  behavior_plugins.py  mission_manager.py  state_monitor.py
venom_bringup/venom_bringup/plugins/: __init__.py  health_plugin.py  navigation_plugin.py
(+67 files in other folders)
